--- a/03-introduction.Rmd
+++ b/03-introduction.Rmd
@@ -10,7 +10,7 @@
 <br></br>
 
 <span class="firstcharacter">K</span>
-hoa học thường được coi là một quá trình tích lũy liên tục. In their scientific endeavors, researchers build on the evidence compiled by generations of scientists who came before them. A famous quote by Isaac Newton stresses that if we want to see further, we can do so by standing on the "shoulders of giants". Many of us are fascinated by science **because** it is progressive, furthering our understanding of the world, and helping us to make better decisions. 
+hoa học thường được coi là một quá trình tích lũy liên tục. Với những nỗ lực của chính họ, các nhà khoa học đã dựa vào các bằng chứng đã được tổng hợp bởi các thế hệ nhà khoa học đi trước họ. Có một câu nói rất nổi tiếng của một nhà khoa học vĩ đại Isaac Newton đã nhấn mạnh rằng: "Nếu chúng ta muốn nhìn xa hơn. chúng ta có thể làm điều đó bằng cách đứng trên vai những người khổng lồ (shoulders of giants)". Nhiều người trong chúng ta bị cuốn hút bởi khoa học **bởi vì** nó tiến bộ, nâng cao hiểu biết của chúng ta về thế giới và giúp chúng ta đưa ra quyết định tốt hơn. 
 
 At least by the numbers alone, this sentiment may be justified. Never in history did we have access to more evidence in the form of published research articles than we do today. Petabytes of research findings are produced every day all around the world. In biomedicine alone, more than one million peer-reviewed articles are published each year [@bjork2008global]. 
 
